--- a/frontend/login.html
+++ b/frontend/login.html
@@ -28,6 +28,7 @@
         </form>
     </div>
 
+    <!-- Corrected order: api.js BEFORE auth.js -->
     <script src="./js/api.js"></script>
     <script src="./js/auth.js"></script>
 </body>
