--- a/frontend/superadmin.html
+++ b/frontend/superadmin.html
@@ -109,6 +109,7 @@
         </div>
 
     </main>
+    <!-- Corrected order: api.js BEFORE auth.js and superadmin.js -->
     <script src="./js/api.js"></script>
     <script src="./js/auth.js"></script>
     <script src="./js/superadmin.js"></script>
