--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - QR Digital Menu</title>
     <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <!-- Custom styles including font imports -->
   <link rel="stylesheet" href="./css/dist.css">
 </head>
