--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,13 +6,28 @@
     <title>Admin Dashboard - QR Digital Menu</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google Fonts Import for Preahvihear (Khmer) and Inter (English Professional) -->
+    <!-- Google Fonts Import for Battambang (Khmer) and Inter (English Professional) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Preahvihear:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Battambang:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
     <style>
+        /* --- Google Fonts Imports (already handled by link tags above, but kept for clarity if needed elsewhere) --- */
+        /* For English (Inter) professional font */
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
+        /* For Khmer (Battambang) font */
+        @import url('https://fonts.googleapis.com/css2?family=Battambang:wght@400;700&display=swap');
+
+        /* --- Tailwind CSS Directives --- */
+        /* These lines are essential for Tailwind to work */
+        @tailwind base;
+        @tailwind components;
+        @tailwind utilities;
+
+        /* --- Custom Global Styles --- */
+        /* This is where you put your custom CSS, which Tailwind will process */
+
         /* Custom scrollbar for better aesthetics */
         .scrollbar-hide::-webkit-scrollbar {
             display: none;
@@ -21,25 +36,127 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
-        /* Apply Preahvihear for Khmer characters, and Inter for Latin characters/general use */
+
+        /* Product card image aspect ratio - square (used in grid view) */
+        .product-image-container {
+            position: relative;
+            width: 100%;
+            padding-top: 100%; /* Square aspect ratio */
+            overflow: hidden;
+            border-radius: 0.5rem; /* rounded-lg */
+        }
+        .product-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        /* Custom styles for list view */
+        .product-list-item {
+            display: flex;
+            align-items: center;
+            padding: 0.75rem 0; /* py-3 */
+            border-bottom: 1px solid #e5e7eb; /* border-b border-gray-200 */
+            cursor: pointer;
+        }
+        .product-list-item:last-child {
+            border-bottom: none;
+        }
+        .product-list-item .list-image-container {
+            position: relative;
+            width: 60px; /* Adjust size for list view */
+            height: 60px;
+            flex-shrink: 0;
+            overflow: hidden;
+            border-radius: 0.5rem; /* rounded-lg */
+            margin-right: 1rem; /* mr-4 */
+            border: 1px solid #e5e7eb; /* Subtle border for list view image */
+        }
+        .product-list-item .list-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .product-list-item .list-content {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        .product-list-item .list-content h3 {
+            font-size: 1rem;
+            font-weight: 600;
+            color: #1f2937;
+            margin-bottom: 0.25rem;
+        }
+        .product-list-item .list-content p {
+            font-size: 0.75rem;
+            color: #6b7280;
+            line-height: 1.3;
+        }
+        .product-list-item .list-price {
+            flex-shrink: 0;
+            margin-left: 1rem;
+            font-size: 1rem;
+            font-weight: 700;
+            color: #ea580c;
+        }
+
+        /* Apply Inter font as primary for all text, with generic sans-serif fallbacks */
+        html {
+            font-family: 'Inter', ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", serif !important;
+            text-rendering: optimizeLegibility;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            font-feature-settings: normal;
+            font-variant-ligatures: normal;
+            font-language-override: normal;
+            direction: ltr;
+            /* Removed font-weight from html to apply more specifically */
+        }
+
+        /* Explicitly apply font-weight to common text elements */
+        body, h1, h2, h3, h4, h5, h6, p, a, span, div, input, select, textarea, button {
+            font-weight: 600; /* Apply semibold to all common text elements */
+        }
+
+        /* Override for specific elements if needed, e.g., for descriptions */
+        .product-card-description,
+        .list-content p,
+        #modalStoreDescription,
+        #loginMessage,
+        #createAdminMessage,
+        #editAdminMessage,
+        #storeMessage,
+        #categoryMessage,
+        #editCategoryMessage,
+        #productMessage,
+        #editProductMessage,
+        #noMenuMessage,
+        #noSearchResultsMessage,
+        #loadingMessage {
+            font-weight: 400; /* Regular weight for descriptions and messages */
+        }
+
+        /* Ensure font-weight for specific bold elements remains strong */
+        .font-bold {
+            font-weight: 700 !important; /* Ensure Tailwind's font-bold is respected */
+        }
+        .font-semibold {
+            font-weight: 600 !important; /* Ensure Tailwind's font-semibold is respected */
+        }
+
+        /* Specific font application for Khmer characters */
         body, input, select, textarea, button, h1, h2, h3, h4, p, a, th, td, li {
-            font-family: "Preahvihear", "Inter", sans-serif !important; /* Force Preahvihear for Khmer, Inter for English */
+            font-family: "Battambang", "Inter", sans-serif !important; /* Prioritize Battambang for Khmer, Inter for English */
         }
-        /* General form input styling for consistency - reverted to subtle border */
-        input[type="text"],
-        input[type="email"],
-        input[type="password"],
-        input[type="tel"],
-        input[type="url"],
-        input[type="number"],
-        select,
-        textarea {
-            @apply shadow-sm appearance-none border border-gray-300 rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base; /* Reverted border-2 to border, and border-gray-400 to border-gray-300 */
-        }
-        /* File input specific styling */
-        input[type="file"] {
-            @apply block w-full text-base text-gray-600 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-base file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100 cursor-pointer;
-        }
+
         /* Modal specific adjustments for better responsiveness and appearance */
         .modal-overlay {
             position: fixed;
@@ -362,7 +479,7 @@
                     </div>
                     <div>
                         <label for="productPrice" class="block text-gray-700 text-base font-semibold mb-2">Price (Optional):</label>
-                        <input type="number" id="productPrice" name="price" step="0.01" placeholder="e.g., 9.99" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                        <input type="text" id="productPrice" name="price" placeholder="e.g., 9.99 or 1XX$" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
                     </div>
                     <div>
                         <label for="productImage" class="block text-gray-700 text-base font-semibold mb-2">Product Image (PNG, JPG):</label>
@@ -431,7 +548,7 @@
                         </div>
                         <div>
                             <label for="editProductPrice" class="block text-gray-700 text-base font-semibold mb-2">Price (Optional):</label>
-                            <input type="number" id="editProductPrice" name="price" step="0.01" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                            <input type="text" id="editProductPrice" name="price" placeholder="e.g., 9.99 or 1XX$" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
                         </div>
                         <div>
                             <label for="editProductImage" class="block text-gray-700 text-base font-semibold mb-2">Product Image (select to change):</label>
