--- a/frontend/menu_display.html
+++ b/frontend/menu_display.html
@@ -173,9 +173,14 @@
             color: #4b5563;
             line-height: 1.4;
         }
+
+        /* Ensure popup price is orange */
+        #popupProductPrice {
+            color: #ea580c !important; /* Force orange color */
+        }
     </style>
 </head>
-<body class="bg-gray-100 leading-normal tracking-normal flex flex-col min-h-screen"> <!-- Removed font-sans from body -->
+<body class="bg-gray-100 leading-normal tracking-normal flex flex-col min-h-screen">
 
     <!-- Sticky Header for Store Info -->
     <header class="bg-white shadow-md py-4 sticky top-0 z-20">
@@ -207,7 +212,7 @@
     </div>
 
     <!-- Sticky Category Tabs -->
-    <nav class="bg-white shadow-sm sticky top-[72px] z-15 border-b border-gray-200">
+    <nav class="bg-white shadow-sm sticky top-[calc(64px+52px)] z-15 border-b border-gray-200"> <!-- Adjusted top for sticky -->
         <div class="container mx-auto px-4 overflow-x-auto whitespace-nowrap scrollbar-hide">
             <ul id="categoryTabs" class="flex space-x-4 py-2">
                 <!-- Category tabs will be loaded here by JavaScript -->
@@ -237,10 +242,10 @@
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
             </button>
             <img id="popupImage" src="" alt="Popup Image" class="block w-full h-auto object-contain mb-4">
-            <div class="text-left w-full px-4 product-info-container"> <!-- Added product-info-container class -->
+            <div class="text-left w-full px-4 product-info-container">
                 <h3 id="popupProductName" class="text-xl font-bold text-gray-800 mb-2"></h3>
-                <p id="popupProductDescription" class="text-sm text-gray-600 mb-2"></p> <!-- Added mb-2 for spacing -->
-                <p id="popupProductPrice" class="text-lg font-bold text-orange-600"></p> <!-- NEW: Price element -->
+                <p id="popupProductDescription" class="text-sm text-gray-600 mb-2"></p>
+                <p id="popupProductPrice" class="text-lg font-bold text-orange-600"></p> <!-- Price element with orange color -->
             </div>
         </div>
     </div>
