--- a/frontend/menu_display.html
+++ b/frontend/menu_display.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Custom CSS (compiled from style.css by Tailwind) -->
     <link rel="stylesheet" href="./css/dist.css"> 
+    <!-- Google Fonts for Kantumruy Pro (Khmer) and Inter (English) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
     <style>
         /* Custom scrollbar for category tabs */
         .scrollbar-hide::-webkit-scrollbar {
@@ -177,6 +182,32 @@
         /* Ensure popup price is orange */
         #popupProductPrice {
             color: #ea580c !important; /* Force orange color */
+            font-size: 1.5rem !important; /* Increased font size for popup price */
+            /* You can add responsive font sizes here if needed, e.g.: */
+            /* @media (min-width: 768px) {
+                font-size: 2rem !important;
+            } */
+        }
+
+        /* Apply Kantumruy Pro for Khmer text, Inter for English, with bold weight */
+        body, h1, h2, h3, h4, p, a, span, div, input, select, textarea, button, th, td, li {
+            font-family: 'Kantumruy Pro', 'Inter', sans-serif !important;
+            font-weight: 700; /* Apply bold weight to all text elements */
+        }
+        /* Override for specific elements if needed to be less bold */
+        .text-sm, .text-base, .text-gray-600 { /* Adjust as needed for descriptions/smaller text */
+            font-weight: 400; /* Regular weight for descriptions and messages */
+        }
+        .font-bold {
+            font-weight: 700 !important; /* Ensure Tailwind's font-bold is respected */
+        }
+        .font-semibold {
+            font-weight: 600 !important; /* Ensure Tailwind's font-semibold is respected */
+        }
+
+        /* Specifically target category tabs to ensure they are bold */
+        #categoryTabs a {
+            font-weight: 700 !important; /* Make category tab links bold */
         }
     </style>
 </head>
